--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,3 +4,5 @@ services:
         command: python manage.py runserver 0.0.0.0:8000
         ports:
             - "8000:8000"
+        environment: 
+            - DEBUG=yes
