--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
             - POSTGRES_DB=cbr
             - POSTGRES_USER=${POSTGRES_USER}
             - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+            - SECRET_KEY=${SECRET_KEY}
         volumes:
             - ./server:/code
         depends_on: 
