--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,5 @@
 # Reference: https://docs.docker.com/compose/django/
-FROM python:3
+FROM python:3.9.1-buster
 ENV PYTHONUNBUFFERED=1
 WORKDIR /code
 COPY requirements.txt /code/
