--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.5.3",
     "formik": "^2.2.6",
     "formik-material-ui": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
