--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,8 +1,12 @@
 version: "3.7"
 services:
     django:
+        container_name: cbr_django
         command: python manage.py runserver 0.0.0.0:8000
         ports:
             - "8000:8000"
         environment: 
             - DEBUG=yes
+            - POSTGRES_HOST=cbr_postgres
+    postgres:
+        container_name: cbr_postgres
