Disable source map for CI/CD builds

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ build client:
     - npm install
   script:
     - npx prettier --check .
-    - CI=false npm run build
+    - GENERATE_SOURCEMAP=false npm run build
   after_script:
     - tar -czvf client_build.tar.gz client/build
   artifacts:
