--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "recharts": "^2.0.8",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
