--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -11,13 +11,13 @@
       "src": "/images/app_icon_192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "maskable any"
     },
     {
       "src": "/images/app_icon_512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "maskable any"
     }
   ]
 }
