--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "formik-material-ui": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
+    "react-cropper": "^2.1.7",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
