--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -18,6 +18,7 @@ services:
         volumes:
             - ./caddy:/etc/caddy
             - ./client/build:/var/www
+            - django_uploads:/var/www-uploads
         ports:
             - ${PORT}:80
         environment:
