--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "reinstall": "rm -rf node_modules && npm i",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
