--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,22 +16,22 @@ build client:
     # build on merge requests if there are changes
     - if: '$CI_MERGE_REQUEST_ID != null'
       changes:
-        - client/**/*
+        - web/**/*
       when: always
     # build on deployments
     - if: '$CI_COMMIT_BRANCH == $STAGING_BRANCH || $CI_COMMIT_BRANCH == $PROD_BRANCH'
       when: always
   before_script:
-    - cd client
+    - cd web
     - npm install
   script:
     - npx prettier --check .
     - GENERATE_SOURCEMAP=false npm run build
   after_script:
-    - tar -czvf client_build.tar.gz client/build
+    - tar -czvf web_build.tar.gz web/build
   artifacts:
     paths:
-      - client_build.tar.gz
+      - web_build.tar.gz
 
 build server:
   stage: build
@@ -76,7 +76,7 @@ deploy staging:
     - cp /var/cbr/staging.env ./.env
     - source ./.env
     - docker-compose -f docker-compose.yml -f docker-compose.deploy.yml build
-    - tar -xvf client_build.tar.gz
+    - tar -xvf web_build.tar.gz
     - docker-compose -f docker-compose.yml -f docker-compose.deploy.yml up --force-recreate -d
     - bash -c 'sleep 10'
     - docker exec ${COMPOSE_PROJECT_NAME}_django python manage.py migrate
@@ -92,7 +92,7 @@ deploy prod:
     - cp /var/cbr/prod.env ./.env
     - source ./.env
     - docker-compose -f docker-compose.yml -f docker-compose.deploy.yml build
-    - tar -xvf client_build.tar.gz
+    - tar -xvf web_build.tar.gz
     - docker-compose -f docker-compose.yml -f docker-compose.deploy.yml up --force-recreate -d
     - bash -c 'sleep 10'
     - docker exec ${COMPOSE_PROJECT_NAME}_django python manage.py migrate
