--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "mobile",
+    "name": "@cbr/mobile",
     "slug": "mobile",
     "version": "1.0.0",
     "orientation": "portrait",
