--- a/mobile/package.json
+++ b/mobile/package.json
@@ -2,13 +2,14 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "expo start",
-    "reinstall": "rm -rf common-1.0.0.tgz && npm pack ../common && rm -rf node_modules && rm -rf package-lock.json && npm i && expo r -c",
+    "refresh-common": "npm uninstall @cbr/common && npm pack ../common && npm install cbr-common-1.0.0.tgz && expo r -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
+    "@cbr/common": "file:cbr-common-1.0.0.tgz",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
