--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,8 +15,8 @@
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@types/react-native-vector-icons": "^6.4.6",
-    "common": "file:common-1.0.0.tgz",
     "expo": "~41.0.1",
+    "expo-cli": "^4.5.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
