--- a/web/package.json
+++ b/web/package.json
@@ -27,7 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "recharts": "^2.0.8",
-    "typescript": "^4.1.3",
+    "typescript": "~4.0.0",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
@@ -56,6 +56,6 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "prettier": "2.3.0"
   }
 }
