Fix Docker volume mapping (client folder renamed to web)

--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -17,7 +17,7 @@ services:
         restart: always
         volumes:
             - ./caddy:/etc/caddy
-            - ./client/build:/var/www
+            - ./web/build:/var/www
             - django_uploads:/var/www-uploads
         ports:
             - ${PORT}:80
