--- a/mobile/package.json
+++ b/mobile/package.json
@@ -33,10 +33,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-navigation": "^4.4.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "react-navigation": "^4.4.4",
     "@types/node": "^15.12.2",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
