Make the checkBox work with clicking

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -18,13 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "baseUrl": "src"
   },
   "include": [
     "src"
   ],
   "dependencies": {
-    "@common": "./../common",
-  },
+    "@common": "./../common"
+  }
 }
