--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@cbr/common": "file:cbr-common-1.0.0.tgz",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/picker": "^1.8.1",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@types/react-native-vector-icons": "^6.4.6",
