--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
     "@cbr/common": "file:cbr-common-1.0.0.tgz",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "^1.16.1",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
@@ -32,12 +33,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "react-native-vector-icons": "^8.1.0",
-    "react-navigation": "^4.4.4",
     "@types/node": "^15.12.2",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "prettier": "2.3.0",
+    "react-native-vector-icons": "^8.1.0",
+    "react-navigation": "^4.4.4",
     "typescript": "~4.0.0"
   },
   "private": true
