--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-navigation": "^7.16.0",
+    "react-native-paper-dropdown": "^1.0.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
