--- a/mobile/package.json
+++ b/mobile/package.json
@@ -30,7 +30,10 @@
     "react-native-dropdown-picker": "^5.1.21",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-modal-picker": "0.0.16",
+    "react-native-modal-selector": "^2.0.3",
     "react-native-paper": "^4.9.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-progress-steps": "^1.3.4",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
