--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@types/react-native-vector-icons": "^6.4.6",
+    "dotenv": "^10.0.0",
     "expo": "~41.0.1",
     "expo-cli": "^4.5.2",
     "expo-status-bar": "~1.0.4",
