--- a/common/package.json
+++ b/common/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "jwt-decode": "^3.1.2",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "yup": "^0.32.9"
   }
 }
