CI: update how web and mobile are built
- Ensure that web is built on any changes to common. For example, if
  someone changes something in common (e.g. renames a function), we want
  to make sure web can build properly after that change.
- Don't use a hardcoded tarbell name when packing common for mobile.
- Strangely, web has a dependency on mobile somehow. We've one instance
  where if mobile is not fully installed before web, building web will
  fail. For now, refactor the mobile install setup and reuse it in
  `build web`'s `before_script` to make builds work.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,10 @@
+# Installs packages in mobile. Must be in the mobile directory.
+.install-mobile: &install-mobile
+  - npm uninstall @cbr/common
+  - COMMON_PACK_NAME=$(npm pack ../common | tail -n 1)
+  - npm install $COMMON_PACK_NAME
+  - npm ci
+
 stages:
   - format
   - build
@@ -41,10 +48,7 @@ build mobile:
   before_script:
     - npm install -g npm@$NPM_VERSION
     - cd mobile
-    - npm uninstall @cbr/common
-    - npm pack ../common
-    - npm install cbr-common-1.0.0.tgz
-    - npm ci
+    - *install-mobile
   script:
     - npx prettier --check .
     - npx expo export --public-url https://ci-build.local
@@ -59,6 +63,7 @@ build web:
     # build on merge requests if there are changes
     - if: '$CI_MERGE_REQUEST_ID != null'
       changes:
+        - common/**/*
         - web/**/*
       when: always
     # build on deployments
@@ -68,6 +73,8 @@ build web:
     - npm install -g npm@$NPM_VERSION
     - cd common
     - npm ci
+    - cd ../mobile
+    - *install-mobile
     - cd ../web
     - npm ci
   script:
