--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,15 +12,18 @@
     "@cbr/common": "file:cbr-common-1.0.0.tgz",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/picker": "^1.8.1",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@types/react-native-vector-icons": "^6.4.6",
+    "babel-plugin-module-resolver": "^3.2.0",
     "expo": "~41.0.1",
     "expo-cli": "^4.5.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-formik": "^1.7.8",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.9.1",
     "react-native-progress-steps": "^1.3.4",
@@ -28,7 +31,9 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-router": "^5.2.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
