--- a/common/package.json
+++ b/common/package.json
@@ -8,7 +8,6 @@
     "typescript": "~4.0.0"
   },
   "dependencies": {
-    "jwt-decode": "^3.1.2",
-    "react": "^17.0.2"
+    "jwt-decode": "^3.1.2"
   }
 }
