--- a/common/package.json
+++ b/common/package.json
@@ -8,6 +8,9 @@
     "typescript": "~4.0.0"
   },
   "dependencies": {
-    "jwt-decode": "^3.1.2"
+    "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
+    "react": "^17.0.2",
+    "yup": "^0.32.9"
   }
 }
