--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,7 +24,7 @@
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.9",
     "native-base": "^2.15.2",
-    "react": "^16.13.1",
+    "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-is-mounted-hook": "^1.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
