Implemented date picker (still needs work)  and few MR review changes

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,9 +11,18 @@
   "dependencies": {
     "@cbr/common": "file:cbr-common-1.0.0.tgz",
     "@expo/vector-icons": "^12.0.0",
+    "@formatjs/intl-datetimeformat": "^4.1.6",
+    "@formatjs/intl-displaynames": "^5.1.6",
+    "@formatjs/intl-getcanonicallocales": "^1.7.1",
+    "@formatjs/intl-listformat": "^6.2.6",
+    "@formatjs/intl-locale": "^2.4.33",
+    "@formatjs/intl-numberformat": "^7.1.5",
+    "@formatjs/intl-pluralrules": "^4.0.28",
+    "@formatjs/intl-relativetimeformat": "^9.1.7",
     "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-picker/picker": "^1.16.1",
+    "@react-native-picker/picker": "1.9.11",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
@@ -26,14 +35,18 @@
     "react-is-mounted-hook": "^1.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-intl": "^1.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-localize": "^2.1.1",
     "react-native-paper": "^4.9.1",
+    "react-native-paper-dates": "^0.4.6",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
     "react-native-unimodules": "~0.13.3",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-woodpicker": "^0.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
