--- a/common/package.json
+++ b/common/package.json
@@ -4,7 +4,7 @@
   "devDependencies": {
     "@types/node": "^15.12.1",
     "@types/react": "^17.0.9",
-    "prettier": "2.3.0",
+    "prettier": "^2.3.0",
     "typescript": "~4.0.0"
   },
   "dependencies": {
