--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,14 +14,11 @@
     "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "^1.8.1",
+    "@react-native-picker/picker": "^1.16.3",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@types/react-native-vector-icons": "^6.4.6",
-<<<<<<< HEAD
-    "babel-plugin-module-resolver": "^3.2.0",
-=======
     "dotenv": "^10.0.0",
->>>>>>> main
     "expo": "~41.0.1",
     "expo-cli": "^4.5.2",
     "expo-status-bar": "~1.0.4",
