--- a/common/package.json
+++ b/common/package.json
@@ -1,15 +1,16 @@
 {
-    "name": "@cbr/common",
-    "version": "1.0.0",
-    "devDependencies": {
-        "@types/node": "^15.12.1",
-        "@types/react": "^17.0.9",
-        "prettier": "^2.3.0",
-        "typescript": "~4.0.0"
-    },
-    "dependencies": {
-        "formik": "^2.2.9",
-        "jwt-decode": "^3.1.2",
-        "yup": "^0.32.9"
-    }
+  "name": "@cbr/common",
+  "version": "1.0.0",
+  "devDependencies": {
+    "@types/node": "^15.12.1",
+    "@types/react": "^17.0.9",
+    "prettier": "^2.3.0",
+    "typescript": "~4.0.0"
+  },
+  "dependencies": {
+    "async-mutex": "^0.3.1",
+    "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
+    "yup": "^0.32.9"
+  }
 }
