add Mocha + Chai tests for common
This moves variables in auth.ts in order to let the test code call
shared functions while still ensuring that they are not exported for use
outside of common.

For CI, we added tests with test reports and also a compiler check (via
`npx tsc`) for common to ensure that common actually compiles correctly.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,6 @@
   - npm ci
 
 stages:
-  - format
   - build
   - deploy
 
@@ -19,8 +18,8 @@ variables:
   PROD_BRANCH: "prod"
   NPM_VERSION: "7.19.0"
 
-format common:
-  stage: format
+test common:
+  stage: build
   image: node:14
   tags:
     - docker
@@ -37,6 +36,13 @@ format common:
     - npm ci
   script:
     - npx prettier --check .
+    - npx tsc
+    - npm run test-ci
+  artifacts:
+    expire_in: 1 day
+    reports:
+      junit:
+        - common/test-results.xml
 
 build mobile:
   stage: build
