--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,7 +13,7 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-picker/picker": "1.9.11",
+    "@react-native-picker/picker": "^1.9.11",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@types/react-native-vector-icons": "^6.4.6",
@@ -23,7 +23,6 @@
     "expo-cli": "^4.5.2",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.9",
-    "formik-material-ui": "^3.0.1",
     "native-base": "^2.15.2",
     "react": "^16.13.1",
     "react-dom": "16.13.1",
