--- a/mobile/package.json
+++ b/mobile/package.json
@@ -31,6 +31,7 @@
     "expo": "~41.0.1",
     "expo-cli": "^4.5.2",
     "expo-status-bar": "~1.0.4",
+    "formik": "^2.2.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-is-mounted-hook": "^1.1.1",
