switch to Jest for common's testing framework
This ends up reintroducing React as a dev dependency for common. This is
needed in order to test hooks. From testing on both web and mobile, we
don't have any regressions.

References:
* https://stackoverflow.com/a/52910794
* https://stackoverflow.com/a/56999105

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ test common:
     expire_in: 1 day
     reports:
       junit:
-        - common/test-results.xml
+        - common/junit.xml
 
 build mobile:
   stage: build
