--- a/common/package.json
+++ b/common/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "test": "jest",
-    "test-ci": "jest --ci --reporters=default --reporters=jest-junit"
+    "test-ci": "jest --ci --coverage --reporters=default --reporters=jest-junit"
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^7.0.1",
