--- a/mobile/package.json
+++ b/mobile/package.json
@@ -35,8 +35,10 @@
         "core-js": "^3.15.2",
         "dotenv": "^10.0.0",
         "expo": "~41.0.1",
+        "expo-background-fetch": "~9.1.0",
         "expo-cli": "^4.9.0",
         "expo-status-bar": "~1.0.4",
+        "expo-task-manager": "~9.1.0",
         "formik": "^2.2.9",
         "native-base": "^2.15.2",
         "react": "16.13.1",
