common: add more tests
* Achieve close to 100% test code coverage of auth.ts
* Test cachedAPI more thoroughly by creating test cache objects, since
  existing caches are harder to test due to local module state and
  no distinction between error and loading values.
* Note that reinitializeCommon in init.ts is marked with the internal
  tag. This is just to make it clear that the function is internal to
  the common module, although it can be used in tooling (see
  https://tsdoc.org/pages/tags/internal/ and
  https://www.typescriptlang.org/tsconfig#stripInternal for more
  information about tooling).
* dates.ts: rename timestampToDateFromReference to
  getDateFormatterFromReference for clarity

--- a/common/package.json
+++ b/common/package.json
@@ -2,8 +2,8 @@
   "name": "@cbr/common",
   "version": "1.0.0",
   "scripts": {
-    "test": "jest",
-    "test-ci": "jest --ci --coverage --reporters=default --reporters=jest-junit"
+    "test": "LANG=en-US jest",
+    "test-ci": "LANG=en-US jest --ci --coverage --reporters=default --reporters=jest-junit"
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^7.0.1",
