--- a/mobile/package.json
+++ b/mobile/package.json
@@ -42,6 +42,7 @@
     "react-native-localize": "^2.1.1",
     "react-native-paper": "^4.9.1",
     "react-native-paper-dates": "^0.4.6",
+    "react-native-progress-steps": "^1.3.4",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
