--- a/mobile/package.json
+++ b/mobile/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@types/react-native-vector-icons": "^6.4.6",
+    "common": "^0.2.5",
     "dotenv": "^10.0.0",
     "expo": "~41.0.1",
     "expo-cli": "^4.5.2",
