Initiated single client component + formik port

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -50,7 +50,8 @@
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
     "react-native-unimodules": "~0.13.3",
-    "react-native-woodpicker": "^0.3.7"
+    "react-native-woodpicker": "^0.3.7",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
