--- a/mobile/package.json
+++ b/mobile/package.json
@@ -42,6 +42,8 @@
     "react-native-intl": "^1.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-localize": "^2.1.1",
+    "react-native-multiple-select": "^0.5.6",
+    "react-native-multiple-select-list": "^1.0.4",
     "react-native-paper": "^4.9.1",
     "react-native-paper-dates": "^0.4.6",
     "react-native-progress-steps": "^1.3.4",
