--- a/mobile/package.json
+++ b/mobile/package.json
@@ -38,10 +38,12 @@
     "react-dom": "16.13.1",
     "react-is-mounted-hook": "^1.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-checkbox-selection": "^1.1.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-intl": "^1.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-localize": "^2.1.1",
+    "react-native-multi-selectbox": "^1.5.0",
     "react-native-multiple-select": "^0.5.6",
     "react-native-multiple-select-list": "^1.0.4",
     "react-native-paper": "^4.9.1",
@@ -50,6 +52,7 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-select-multiple": "^2.1.0",
     "react-native-svg": "12.1.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-woodpicker": "^0.3.7",
