--- a/mobile/package.json
+++ b/mobile/package.json
@@ -39,6 +39,7 @@
     "react-is-mounted-hook": "^1.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-checkbox-selection": "^1.1.0",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-intl": "^1.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
