--- a/mobile/package.json
+++ b/mobile/package.json
@@ -55,6 +55,7 @@
     "react-native-multi-selectbox": "^1.5.0",
     "react-native-multiple-select": "^0.5.6",
     "react-native-multiple-select-list": "^1.0.4",
+    "react-native-navigation": "^7.18.1",
     "react-native-paper": "^4.9.1",
     "react-native-paper-dates": "^0.4.6",
     "react-native-picker-select": "^8.0.4",
