--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,3 +9,4 @@ djangorestframework-simplejwt==4.6.0
 drf-spectacular==0.13.1
 django-filter==2.4.0
 django-downloadview==2.1.1
+django-rest-framework-condition==0.1.1
