--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,3 @@
-# Installs packages in mobile. Must be in the mobile directory.
-.install-mobile: &install-mobile
-  - npm uninstall @cbr/common
-  - COMMON_PACK_NAME=$(npm pack ../common | tail -n 1)
-  - npm install $COMMON_PACK_NAME
-  - npm ci
-
 stages:
   - build
   - test
@@ -51,7 +44,10 @@ build mobile:
   before_script:
     - npm install -g npm@$NPM_VERSION
     - cd mobile
-    - *install-mobile
+    - npm uninstall @cbr/common
+    - COMMON_PACK_NAME=$(npm pack ../common | tail -n 1)
+    - npm install $COMMON_PACK_NAME
+    - npm ci
   script:
     - npx prettier --check .
     - npx expo export --public-url https://ci-build.local
@@ -77,8 +73,6 @@ build web:
     - npm install -g npm@$NPM_VERSION
     - cd common
     - npm ci
-    - cd ../mobile
-    - *install-mobile
     - cd ../web
     - npm ci
   script:
@@ -128,7 +122,7 @@ test common:
   image: node:14
   tags:
     - docker
-  needs: []
+  needs: ["build common"]
   rules:
     - if: "$CI_MERGE_REQUEST_ID != null"
       changes:
