--- a/mobile/package.json
+++ b/mobile/package.json
@@ -26,8 +26,7 @@
         "@react-native-community/datetimepicker": "^3.2.0",
         "@react-native-community/masked-view": "0.1.10",
         "@react-native-community/netinfo": "6.0.0",
-        "@react-native-community/picker": "^1.8.1",
-        "@react-native-picker/picker": "^1.9.11",
+        "@react-native-picker/picker": "1.9.11",
         "@react-navigation/material-bottom-tabs": "^5.3.15",
         "@react-navigation/native": "^5.9.4",
         "@react-navigation/stack": "^5.14.5",
