docker: specify port mapping as a string
The Compose file specification warns that YAML parses numbers formatted
as `xx:yy` as base-60 values, and it recommends that we always specify
mappings as strings

--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -20,7 +20,7 @@ services:
       - ./web/build:/var/www
       - django_uploads:/var/www-uploads
     ports:
-      - ${PORT}:80
+      - "${PORT}:80"
     environment:
       - DOMAIN=${DOMAIN}
       - API_HOSTNAME=${COMPOSE_PROJECT_NAME}_django
