--- a/mobile/package.json
+++ b/mobile/package.json
@@ -26,6 +26,7 @@
         "@react-native-community/datetimepicker": "^3.2.0",
         "@react-native-community/masked-view": "0.1.10",
         "@react-native-community/netinfo": "6.0.0",
+        "@react-native-masked-view/masked-view": "^0.2.6",
         "@react-native-picker/picker": "1.9.11",
         "@react-navigation/material-bottom-tabs": "^5.3.15",
         "@react-navigation/native": "^5.9.4",
@@ -50,6 +51,7 @@
         "react-native-gesture-handler": "~1.10.2",
         "react-native-intl": "^1.0.0",
         "react-native-keyboard-aware-scroll-view": "^0.9.4",
+        "react-native-linear-gradient": "^2.5.6",
         "react-native-localize": "^2.1.1",
         "react-native-modal-picker": "0.0.16",
         "react-native-modal-selector": "^2.0.3",
@@ -64,6 +66,7 @@
         "react-native-safe-area-context": "3.2.0",
         "react-native-screens": "~3.0.0",
         "react-native-select-multiple": "^2.1.0",
+        "react-native-skeleton-placeholder": "^5.0.0",
         "react-native-svg": "12.1.0",
         "react-native-unimodules": "~0.13.3",
         "react-native-vector-icons": "^8.1.0",
