--- a/mobile/package.json
+++ b/mobile/package.json
@@ -37,6 +37,7 @@
         "expo": "~41.0.1",
         "expo-background-fetch": "~9.1.0",
         "expo-cli": "^4.9.0",
+        "expo-image-picker": "~10.1.4",
         "expo-status-bar": "~1.0.4",
         "expo-task-manager": "~9.1.0",
         "formik": "^2.2.9",
