--- a/common/package.json
+++ b/common/package.json
@@ -24,6 +24,7 @@
         "typescript": "~4.0.0"
     },
     "dependencies": {
+        "@types/history": "^4.7.9",
         "async-mutex": "^0.3.1",
         "formik": "^2.2.9",
         "jwt-decode": "^3.1.2",
