--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
         "@types/react-csv": "^1.1.1",
         "@types/react-dom": "^16.9.10",
         "@types/react-router-dom": "^5.1.7",
+        "@types/socket.io-client": "^3.0.0",
         "bootstrap": "^4.5.3",
         "craco-babel-loader": "^0.1.4",
         "formik": "^2.2.6",
@@ -30,6 +31,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "recharts": "^2.0.8",
+        "socket.io-client": "^4.2.0",
         "typescript": "~4.0.0",
         "web-vitals": "^0.2.4",
         "yup": "^0.32.8"
