--- a/web/package.json
+++ b/web/package.json
@@ -4,10 +4,13 @@
     "private": true,
     "dependencies": {
         "@craco/craco": "^6.1.2",
+        "@emotion/react": "^11.4.1",
+        "@emotion/styled": "^11.3.0",
         "@material-ui/core": "^4.11.3",
         "@material-ui/data-grid": "^4.0.0-alpha.20",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/lab": "^4.0.0-alpha.57",
+        "@mui/material": "^5.0.4",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.3",
         "@testing-library/user-event": "^12.6.0",
