--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "recharts": "^2.0.8",
+        "socket.io": "^4.3.0",
         "socket.io-client": "^4.2.0",
         "typescript": "~4.0.0",
         "web-vitals": "^0.2.4",
