--- a/mobile/package.json
+++ b/mobile/package.json
@@ -77,6 +77,7 @@
         "react-navigation": "^4.4.4",
         "react-navigation-stack": "^2.10.4",
         "react-router-dom": "^5.2.0",
+        "socket.io-client": "^4.3.2",
         "yup": "^0.32.9"
     },
     "devDependencies": {
