--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
         "@material-ui/data-grid": "^4.0.0-alpha.20",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/lab": "^4.0.0-alpha.57",
+        "@mui/icons-material": "^5.0.4",
         "@mui/material": "^5.0.4",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.3",
