--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
         "react-csv": "^2.0.3",
         "react-dom": "^17.0.1",
         "react-is-mounted-hook": "^1.1.2",
+        "react-material-ui-carousel": "^2.3.5",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "recharts": "^2.0.8",
