--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -184,6 +184,7 @@ android {
 }
 
 dependencies {
+    implementation project(':watermelondb')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
