--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,6 +22,7 @@
     "@formatjs/intl-numberformat": "^7.1.5",
     "@formatjs/intl-pluralrules": "^4.0.28",
     "@formatjs/intl-relativetimeformat": "^9.1.7",
+    "@nozbe/watermelondb": "^0.23.0",
     "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/datetimepicker": "^3.2.0",
     "@react-native-community/masked-view": "0.1.10",
@@ -85,12 +86,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-decorators": "^7.15.8",
     "@expo/config-types": "^41.0.0",
     "@types/node": "^15.12.2",
     "@types/react": "~16.9.35",
     "@types/react-native": "^0.63.52",
     "@types/react-native-material-dropdown": "^0.11.4",
     "@types/react-router-dom": "^5.1.7",
+    "better-sqlite3": "^7.4.4",
     "prettier": "2.3.0",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
