--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "experimentalDecorators": true,
         "strict": true,
         "esModuleInterop": true,
         "noImplicitAny": false
