--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,7 +2,12 @@ version: "3.7"
 services:
   django:
     container_name: cbr_django
-    command: python manage.py runserver 0.0.0.0:8000
+    # command: python manage.py runserver 0.0.0.0:8000
+    # command: gunicorn cbr.wsgi --bind 0:8000
+
+    # gunicorn command to run an eventlet server
+    command: gunicorn -k eventlet -w 1 --timeout 0 cbr.wsgi --bind 0:8000
+
     ports:
       - "8000:8000"
     environment:
