Make Socket.IO run on same port as Django, locally and when deployed

--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -3,7 +3,7 @@ services:
   django:
     container_name: ${COMPOSE_PROJECT_NAME}_django
     restart: always
-    command: gunicorn cbr.wsgi --bind 0:8000
+    command: gunicorn -k eventlet --workers 1 cbr.wsgi --bind 0:8000
     user: ${GITLAB_RUNNER_UID_GID}
     environment:
       - DOMAIN=${DOMAIN}
