--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
         "@types/react-csv": "^1.1.1",
         "@types/react-dom": "^16.9.10",
         "@types/react-router-dom": "^5.1.7",
+        "axios": "^0.24.0",
         "bootstrap": "^4.5.3",
         "craco-babel-loader": "^0.1.4",
         "expo-localization": "^10.2.0",
