--- a/common/package.json
+++ b/common/package.json
@@ -28,6 +28,7 @@
         "async-mutex": "^0.3.1",
         "formik": "^2.2.9",
         "jwt-decode": "^3.1.2",
+        "socket.io-client": "^4.3.2",
         "yup": "^0.32.9"
     }
 }
