--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,6 +22,7 @@
         "@formatjs/intl-numberformat": "^7.1.5",
         "@formatjs/intl-pluralrules": "^4.0.28",
         "@formatjs/intl-relativetimeformat": "^9.1.7",
+        "@gorhom/bottom-sheet": "^4.1.3",
         "@nozbe/watermelondb": "^0.23.0",
         "@react-native-async-storage/async-storage": "^1.13.0",
         "@react-native-community/datetimepicker": "^3.2.0",
@@ -55,7 +56,7 @@
         "react-native-dropdown-menu": "^2.0.0",
         "react-native-dropdown-picker": "^5.1.21",
         "react-native-elements": "^3.4.2",
-        "react-native-gesture-handler": "~1.10.2",
+        "react-native-gesture-handler": "^1.10.3",
         "react-native-intl": "^1.0.0",
         "react-native-keyboard-aware-scroll-view": "^0.9.4",
         "react-native-linear-gradient": "^2.5.6",
@@ -69,7 +70,7 @@
         "react-native-paper-dates": "^0.4.6",
         "react-native-picker-select": "^8.0.4",
         "react-native-progress-steps": "^1.3.4",
-        "react-native-reanimated": "~2.1.0",
+        "react-native-reanimated": "^2.1.0",
         "react-native-safe-area-context": "3.2.0",
         "react-native-screens": "~3.0.0",
         "react-native-select-multiple": "^2.1.0",
