--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "0.0.1"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -152,6 +153,12 @@ android {
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
+        }
+         release {
+        storeFile file('mock_release.keystore')
+        storePassword 'hhaLogin'
+        keyAlias 'mock_release'
+        keyPassword 'hhaLogin'
         }
     }
     buildTypes {
