--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
         "@types/react-dom": "^16.9.10",
         "@types/react-router-dom": "^5.1.7",
         "bootstrap": "^4.5.3",
+        "browser-image-compression": "^1.0.17",
         "craco-babel-loader": "^0.1.4",
         "expo-localization": "^10.2.0",
         "formik": "^2.2.6",
